[package]
name = "bloatr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
clap = { version = "3.1.18", features = [ "derive" ] }
log = "0.4.17"
nom = "7.1.1"
nom-supreme = "0.8.0"
simplelog = "0.12.0"
