[package]
name = "mapfile"
description = "Parser for GNU linker map files"
repository = "https://github.com/ryankurte/rust-mapfile"
authors = [ "ryan <ryan@kurte.nz>" ]
categories = [ "embedded" ]
keywords = [ "gnu", "linker", "map", "parser", "embedded" ]
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
anyhow = "1.0.57"
clap = { version = "3.1.18", features = [ "derive" ] }
log = "0.4.17"
nom = "7.1.1"
nom-supreme = "0.8.0"
simplelog = "0.12.0"

[dev-dependencies]
pretty_assertions = "1.3.0"
